--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/ideas">Ideas</a></li>
             <li><a href="/pages/info">Info</a></li>
+            <li><%= link_to 'New Idea', new_idea_path %></li>
           </ul>
         </div>
       </div>
