--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,21 @@ body { padding-top: 60px; }
 footer { margin-top: 100px; }
 table, td, th { vertical-align: middle; border: none; }
 th { border-bottom: 1px solid #DDD; }
+
+.navbar-custom {
+ background-color: #BBBDDD;
+ border-color: #E7E7E7;
+}
+
+.navbar-custom a { font-size: 18px; }
+.navbar-custom a:hover {
+  color: #4a4a54;
+  background-color: transparent;
+  text-decoration: none;
+}
+body {  background-color: rgba(200, 255, 255, 50);}
+
+footer {
+  background-color: #ebebeb;
+  padding: 30px 0;
+}
